--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.9",
+    "@fortawesome/free-solid-svg-icons": "^5.6.0",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "i": "^0.3.6",
+    "npm": "^6.5.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
